--- a/demo.html
+++ b/demo.html
@@ -11,7 +11,7 @@
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.4.0/socket.io.min.js" integrity="sha512-I9p4eOeWXGM9m5GhJYd3UDUA5Lr+Epp5e4ykWFYW9hv3jZqdR92S5p+ApMSWuMaV4E+JqILepP1G9kNer4AFGQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script>
-  const socket = io("http://localhost:9060/");
+  const socket = io("http://161.97.166.212:9060/");
 
   socket.emit('join', 'room1');
 socket.on('purchase', data => {console.log(data)});
